Fixed contrast for hire day input in tx frames

--- a/app/globals.css
+++ b/app/globals.css
@@ -105,7 +105,7 @@
 }
 
 .custom-frame input {
-  color: #111;
+  color: #fff;
   background: transparent;
   border: transparent;
   font-size: 0.9rem;
